[project]
name = "pymlops"
version = "1.0.0"
description = "Lightweight toolkit for MLops in Python."
authors = [{name="Aidan LaBella", email="alabella@brown.edu"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "sqlalchemy >= 2.0.0",
    "sqlite3",
    "mysql-connector-python"
]

